[package]
name = "ipv6-proxy-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
bytes = "1.5.0"
clap = { version = "4.4.12", features = ["derive"] }
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["client", "server", "http1", "full"] }
hyper-util = { version = "0.1.2", features = ["full"] }
ipnet = "2.9.0"
tokio = { version = "1.35.1", features = ["full"] }
